fix line wrap in compiler / regression with logging

--- a/www/editor.css
+++ b/www/editor.css
@@ -5972,7 +5972,7 @@ table.dashboard tr td[data-completed^="yes"] {
 }
 
 .powered-by .text {
-  font-size: 0.5em;
+  font-size: 0.45em;
   opacity: 0.5;
 }
 
